<resources>
    <string name="app_name">Cargo Lite</string>
    <string name="warehouseLogo">warehouseLogo</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="LoginButton">LOGIN</string>
    <string name="retypePassword">retype password</string>
    <string name="RegisterButton">Register</string>
    <string name="email">email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="phoneNumber">phone number</string>
    <string name="logo">Logo</string>
    <string name="stock_in">Stock-In</string>
</resources>